fix spacing in rent daily page

--- a/estate-complexes-redesign/css/annonce-page-daily.scss
+++ b/estate-complexes-redesign/css/annonce-page-daily.scss
@@ -297,9 +297,9 @@
     }
   }
 
-  // .apartment-top-container {
-  //   margin-top: 10px;
-  // }
+  .apartment-top-container {
+    margin-bottom: 15px;
+  }
   .description-container {
     margin-top: 30px;
     margin-bottom: 0px;
@@ -404,7 +404,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 
   .rules-layout-col-2 {
     display: grid;
